Fixed the HTML tags, added error handling and cleaned up

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -34,3 +34,30 @@ body {
     margin: $spacing;
 }
 
+.loading {
+    margin: $spacing;
+}
+
+.error {
+    margin: $spacing;
+
+    button {
+        color: white;
+        font-weight: bold;
+        padding: $spacing-small;
+        background-color: $green;
+        border: none;
+
+        &:hover {
+            cursor: pointer;
+            background-color: $teal;
+        }
+
+        &:active,
+        &:focus {
+            background-color: $blue;
+            outline: none;
+        }
+    }
+}
+
