--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -1,6 +1,12 @@
 $spacing-small: 8px;
 $spacing: 16px;
+
 $blue: #1d5894;
 $teal: #207a76;
 $green: #23995c;
 $light-green: #cdfde4;
+
+$font-size-bigger: 22px;
+$font-size-big: 20px;
+$font-size: 16px;
+$font-size-small: 14px;
