--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -11,7 +11,7 @@
     flex-grow: 1;
     margin-right: $spacing;
     padding: 0px $spacing-small;
-    font-size: 20px;
+    font-size: $font-size-big;
 }
 
 .search-btn {
